# mtmelections2

./: CMakeLists.txt  Candidate.c  Candidate.h  City.c  City.h  citizen.c  citizen.h  higogo.cpp  main.c  mr7ba .c  mtm_elections.c  mtm_elections.h  preference.c  preference.h  typedefs_and_general_functions.c  typedefs_and_general_functions.h
libmtm/: set.h
uniqueOrderedList/: CMakeLists.txt  UniqueOrderedList.c  uniqueOrderedList.h
